refactor(harness-install/maven): apply final and toUnmodifiableList
Make local parameters and collected accumulators final where assignment
is single-use, and switch list-collection terminals to
Collectors.toUnmodifiableList so callers receive immutable views by
default.